--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sago",
-  "version": "0.0.0",
+  "name": "build-app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
