--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "build-app",
+  "name": "build-manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prestart": "npm run build-app",
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "app-dev": "cd ./build-app && ng serve --open",
+    "preinstall-app": "npm install",
+    "install-app": "cd ./build-app && npm install",
+    "build-app": "npm run install-app && cd ./build-app && ng build",
+    "prepm2": "npm run prestart",
+    "pm2": "pm2 start npm -- start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
